# my-talent-plan

./: .gitignore  README.md
courses/rust/projects/project-1/: Cargo.toml  README.md
courses/rust/projects/project-1-kvs/: Cargo.toml  README.md
courses/rust/projects/project-1/src/: kv.rs  lib.rs
courses/rust/projects/project-1/tests/: command_line_hello_world.rs  tests.rs
courses/rust/projects/project-2/: .gitignore  Cargo.toml  README.md
courses/rust/projects/project-2/src/: error.rs  kv.rs  lib.rs
courses/rust/projects/project-2/tests/: collections_exerciese.rs  std_io_exercises.rs  test_lib_api.rs  tests.rs
courses/rust/projects/project-3/: .gitignore  Cargo.toml  README.md
courses/rust/projects/project-3/benches/: engine_bench.rs
courses/rust/projects/project-3/src/: client.rs  common.rs  error.rs  lib.rs  server.rs
courses/rust/projects/project-3/src/engines/: kvs.rs  mod.rs  sled.rs
courses/rust/projects/project-3/tests/: cli.rs  kv_store.rs  lib_api.rs
courses/rust/projects/project-4/: Cargo.toml  README.md
courses/rust/projects/project-4/src/: client.rs  error.rs  lib.rs  server.rs
courses/rust/projects/project-4/src/engine/: kvs.rs  mod.rs  sled.rs
courses/rust/projects/project-4/src/engines/: kvs.rs  mod.rs
courses/rust/projects/project-4/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
courses/rust/projects/project-4/tests/: api_test.rs  kv_store.rs
