[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["A Talent <a-talent@gmail.com>"]
description = "A key-value store"

[dependencies]
clap = "2.33.0"
structopt = "0.2.15"
failure = "0.1.5"
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0.39"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.34.6"
chrono = "0.4.38"


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"


[[bench]]
name = "engine_bench"
# disable built-in test harness for running this particular benchmark
harness = false

